--- a/index.html
+++ b/index.html
@@ -52,6 +52,42 @@
       </section>
       <section id="contact">
         <h2>Contact</h2>
-        <p>To contact us, please call <a href="tel:2107458646">(210)745-8646</a> or email <a href="mailto:ethanmaddix@gmail.com">ethanmaddix@gmail.com </p>
-        </section>
+        <p>Call <a href="tel:2107458646">(210)745-8646</a> or email <a href="mailto:ethanmaddix@gmail.com">ethanmaddix@gmail.com </a> to schedule your session!</p>
+      </section>
+
+      <section id="schedule">
+        <h2>Weekly Schedule</h2>
+        <table>
+          <tr>
+            <th>Day</th>
+            <th>Workout</th>
+            <th>Time</th>
+            <th>Location</th>
+          </tr>
+          <tr>
+            <td>Monday</td>
+            <td class="workout-name"><a href="legs.html">DEADLY LEGS</a></td>
+            <td>6am to 7:30am</td>
+            <td class="location">Life Time (The Rim)</td>
+          </tr>
+          <tr>
+            <td>Tuesday</td>
+            <td class="workout-name"><a href="upper.html">USURPING UPPER BODY</a></td>
+            <td>6am to 7:30am</td>
+            <td class="location">Life Time (The Rim)</td>
+          </tr>
+          <tr>
+            <td>Thursday</td>
+            <td class="workout-name"><a href="legs.html">LEGENDARY LEGS</a></td>
+            <td>6am to 7:30am</td>
+            <td class="location">Life Time (The Rim)</td>
+          </tr>
+          <tr>
+            <td>Friday</td>
+            <td class="workout-name"><a href="upper.html">ARMORED ARMS</a></td>
+            <td>6am to 7:30am</td>
+            <td class="location">Life Time (The Rim)</td>
+          </tr>
+        </table>
+      </section>
             
