--- a/upper.html
+++ b/upper.html
@@ -17,13 +17,13 @@
       </ul>
     </nav>
     <main>
-      <section id="upper-body-power">
-        <h2>Upper Body Power</h2>
-        <p>This workout focuses on building strength and power in the upper body through exercises such as the barbell over head press, barbell rows, machine fly, and machine rear delt. It also includes exercises for the triceps and back such as dips and pullups. This workout is available on Wednesdays and Saturdays from 6am to 8am.</p>
+      <section id="USURPING UPPER BODY">
+        <h2>USURPING UPPER BODY</h2>
+        <p>Usurp your upper body with 'USURPING UPPER BODY' workout! Our focus is a one-two punch of power and strength: overhead press and barbell rows for upper body dominance, and pull ups and dips for a torso Tarzan would dream of! But we don't stop there, we also pump up the chest with machine flys and balance the shoulders with machine reverse flys for a complete upper body takeover.</p>
       </section>
       <section id="upper-body-definition">
-        <h2>Upper Body Definition</h2>
-        <p>This workout focuses on building definition and muscular endurance in the upper body through exercises such as the incline dumbbell press, dumbbell lateral raise, dumbbell one arm row, machine fly, and machine rear delt. It also includes exercises for the triceps and back such as dips and pullups. This workout is available on Sundays and Thursdays from 6am to 8am.</p>
+        <h2>ARMORED ARMS</h2>
+        <p>Get ready to flex your muscles and armor up your arms with our "ARMORED ARMS" workout. This intense routine will have you diving into compound movements like dips and pull-ups, which will give your upper body a powerful boost. The incline dumbbell press and seated rows will pre-exhaust your arms, leaving them ready for some serious arm sculpting. Get ready to pump up your biceps and triceps with dumbbell curls and skull crushers. By the end of this workout, your arms will be chiseled like a medieval knight's armor. Don't be a weakling, join us and become an arm-ored warrior!</p>
       </section>
     </main>
   </body>
